# nccl-rdma-sharp-plugins

./: .clang-format  .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  nccl-rdma-sharp-plugins.pc.in  nccl-rdma-sharp-plugins.spec.in
.ci/: Jenkinsfile  README.md  build.sh  build_cli.sh  build_nccl.sh  build_nccl_rdma_sharp_plugins.sh  ci_functions.sh  config-header-check.yml  configure_sharp.sh  ibdev2netdev  nccl_tests  publish_artefacts.sh  pushd_functions.sh  run_nccl_test.sh  run_nccl_tests.sh  settings.sh  sharp_coll_test_wrapper  taskset
.ci/cfg/clx-host-21514/: hostfile
.ci/cfg/clx-host-21518/: hostfile
.ci/cfg/clx-host-21518/sharp_conf/: sharp_am_node.txt
.ci/cfg/swx-clx02/sharp_conf/: sharp_am.cfg  sharp_am_node.txt
.github/workflows/: nccl-sharp-plugin.yml
contrib/: buildrpm.sh
debian/: changelog.in  control.in  copyright  nccl-rdma-sharp-plugins.postinst.in  nccl-rdma-sharp-plugins.prem.in  rules.in
include/: core.h  debug.h  ibvwrap.h  nccl.h  nccl_net.h  net.h  net_device.h  net_v10.h  net_v11.h  net_v4.h  net_v5.h  net_v6.h  net_v7.h  net_v8.h  net_v9.h  p2p_plugin.h  param.h  socket.h  timer.h  ucx_uct_lib.h  ucx_uct_ring.h  utils.h
m4/: sharp.m4  ucx.m4
src/: Makefile.am  ib_plugin.c  ibvwrap.c  p2p_plugin.c  param.c  plugin.c  sharp_plugin.c  socket.c  ucx_plugin.c  ucx_rma_plugin.c  ucx_uct_lib.c  ucx_uct_plugin.c  ucx_uct_rd_plugin.c  utils.c
