#
# SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
# Copyright (c) 2019-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
#
# See file LICENSE for terms.
#

SUBDIRS = src

EXTRA_DIST =
EXTRA_DIST += autogen.sh
EXTRA_DIST += include
EXTRA_DIST += debian
EXTRA_DIST += nccl-rdma-sharp-plugins.spec

